--- a/arch/arm64/boot/dts/renesas/overlays/rzboard-adc.dts
+++ b/arch/arm64/boot/dts/renesas/overlays/rzboard-adc.dts
@@ -17,17 +17,8 @@
 
 #include <dt-bindings/pinctrl/pinctrl-rzg2l.h>
 
-/* 40-pin extended GPIO, expanded into UART, SPI, I2C, PWM and other interfaces */
+/* J18 extend interface */
 
-&pinctrl {
-	scif2_pins: scif2 {
-		groups = "scif2_data_e";
-		function = "scif2";
-	};
-};
-
-&scif2 {
-	pinctrl-0 = <&scif2_pins>;
-	pinctrl-names = "default";
+&adc {
 	status = "okay";
 };
