--- a/arch/arm64/boot/dts/renesas/overlays/rzboard-can.dts
+++ b/arch/arm64/boot/dts/renesas/overlays/rzboard-can.dts
@@ -20,14 +20,32 @@
 /* 40-pin extended GPIO, expanded into UART, SPI, I2C, PWM and other interfaces */
 
 &pinctrl {
-	scif2_pins: scif2 {
-		groups = "scif2_data_e";
-		function = "scif2";
+	canfd0_pins: canfd0 {
+		groups = "can0_tx_a", "can0_rx_a";
+		function = "can0";
+	};
+
+	canfd1_pins: canfd1 {
+		groups = "can1_tx_a", "can1_rx_a";
+		function = "can1";
 	};
 };
 
-&scif2 {
-	pinctrl-0 = <&scif2_pins>;
+&can {
+	pinctrl-0 = <&canfd0_pins>, <&canfd1_pins>;
 	pinctrl-names = "default";
 	status = "okay";
+
+	/* Default set as Classical CAN(CAN 2.0) mode, remove to enable CAN FD mode */
+	renesas,no-can-fd;
+
+	/* CAN on 40pin header without transceiver */
+	channel0 {
+		status = "okay";
+	};
+
+	/* CAN on J18 with transceiver */
+	channel1 {
+		status = "okay";
+	};
 };
