--- a/arch/arm64/boot/dts/renesas/overlays/rzboard-lite-audio.dts
+++ b/arch/arm64/boot/dts/renesas/overlays/rzboard-lite-audio.dts
@@ -17,17 +17,13 @@
 
 #include <dt-bindings/pinctrl/pinctrl-rzg2l.h>
 
-/* 40-pin extended GPIO, expanded into UART, SPI, I2C, PWM and other interfaces */
+/* J20 extend interface */
 
-&pinctrl {
-	scif2_pins: scif2 {
-		groups = "scif2_data_e";
-		function = "scif2";
-	};
-};
-
-&scif2 {
-	pinctrl-0 = <&scif2_pins>;
-	pinctrl-names = "default";
+&ssi3 {
 	status = "okay";
 };
+
+&lite_audio {
+	status = "okay";
+};
+
