--- a/arch/arm64/boot/dts/renesas/overlays/rzboard-ov5640.dts
+++ b/arch/arm64/boot/dts/renesas/overlays/rzboard-ov5640.dts
@@ -17,17 +17,15 @@
 
 #include <dt-bindings/pinctrl/pinctrl-rzg2l.h>
 
-/* 40-pin extended GPIO, expanded into UART, SPI, I2C, PWM and other interfaces */
-
-&pinctrl {
-	scif2_pins: scif2 {
-		groups = "scif2_data_e";
-		function = "scif2";
-	};
-};
-
-&scif2 {
-	pinctrl-0 = <&scif2_pins>;
-	pinctrl-names = "default";
+&cru {
 	status = "okay";
 };
+
+&csi2 {
+	status = "okay";
+};
+
+&ov5640 {
+	status = "okay";
+};
+
