HDMI:DTS:RzBoard: Rename HDMI Sound card name
	Rename HDMI Sound card name in DTS file

Signed-off-by: wenxue.guo <wenxue.guo@avnet.com>

--- a/arch/arm64/boot/dts/renesas/rzboard.dts
+++ b/arch/arm64/boot/dts/renesas/rzboard.dts
@@ -209,7 +209,7 @@
 
 	hdmi_audio: graph_sound_card {
 		compatible = "audio-graph-card";
-		label = "avt-sound-card";
+		label = "hdmi-sound-card";
 		dais = <&ssi1>;
 	};
 
