update dts and mipi panel driver to add switch gpio support on new version board

--- a/arch/arm64/boot/dts/renesas/rzboard.dts
+++ b/arch/arm64/boot/dts/renesas/rzboard.dts
@@ -611,7 +611,7 @@
 		compatible = "ilitek,ili9881c";
 		reg = <0>;
 		dsi-lanes = <2>;
-		enable-gpios = <&pinctrl  RZG2L_GPIO(43, 0) GPIO_ACTIVE_HIGH>;
+		switch-gpios = <&pinctrl RZG2L_GPIO(43, 0) GPIO_ACTIVE_HIGH>;
 		backlight = <&backlight>;
 		status = "okay";
 
