--- a/arch/arm64/boot/dts/renesas/rzboard.dts
+++ b/arch/arm64/boot/dts/renesas/rzboard.dts
@@ -54,15 +54,21 @@
 		/* device specific region for contiguous allocations */
 		drp_reserved: DRP-AI {
 			reusable;
-			reg = <0x0 0x70000000 0x0 0x10000000>;
+			reg = <0x0 0x80000000 0x0 0x20000000>;
 		};
 
 		image_buf0: image_buf@0 {
 			compatible = "shared-dma-pool";
 			reusable;
-			reg = <0x0 0x80000000 0x0 0x02000000>;
+			reg = <0x0 0xB9000000 0x0 0x04000000>;
 			label = "image_buf0";
 		};
+
+		isp_work0: SIMPLE_ISP {
+			reusable;
+			reg = <0x0 0xBD000000 0x0 0x03000000>;
+		};
+
 	};
 
 	mmngr {
