--- a/arch/arm64/configs/rzboard_defconfig
+++ b/arch/arm64/configs/rzboard_defconfig
@@ -338,6 +338,7 @@ CONFIG_DRM_RCAR_DU=y
 CONFIG_DRM_RCAR_DW_HDMI=y
 CONFIG_DRM_RZG2L_MIPI_DSI=y
 CONFIG_DRM_PANEL_LVDS=y
+CONFIG_DRM_PANEL_ILITEK_ILI9881C=y
 CONFIG_DRM_DUMB_VGA_DAC=y
 CONFIG_DRM_THINE_THC63LVD1024=y
 CONFIG_DRM_I2C_ADV7511=y
