MIPI:DTS:RzBoard: Add mipi panel support
	Add mipi panel and backligt nodes

Signed-off-by: Nick <nick.cheng@avnet.com>

--- a/arch/arm64/boot/dts/renesas/overlays/Makefile
+++ b/arch/arm64/boot/dts/renesas/overlays/Makefile
@@ -12,3 +12,4 @@ dtb-y += rzboard-lite-audio.dtbo
 dtb-y += rzboard-ext-uart2.dtbo
 dtb-y += rzboard-ext-i2c.dtbo
 dtb-y += rzboard-ext-spi.dtbo
+dtb-y += rzboard-mipi.dtbo
