--- a/arch/arm64/boot/dts/renesas/rzboard.dts
+++ b/arch/arm64/boot/dts/renesas/rzboard.dts
@@ -261,6 +261,15 @@
 		compatible = "mmc-pwrseq-simple";
 		reset-gpios = <&pinctrl RZG2L_GPIO(39, 2) GPIO_ACTIVE_LOW>;	 /* WLAN PMIC_EN */
 	};
+
+	backlight: backlight {
+		compatible = "pwm-backlight";
+		enable-gpios = <&pinctrl RZG2L_GPIO(43, 3) GPIO_ACTIVE_HIGH>;
+		pwms = <&gpt5 0 40000 0>;
+		brightness-levels = <0 8 32 64 96 128 160 192 224 255>;
+		default-brightness-level = <8>;
+		status = "disabled";
+	};
 };
 
 &xinclk {
@@ -545,6 +554,28 @@
 	dma-names = "tx", "rx";
 };
 
+&gpt5 {
+	pinctrl-0 = <&gpt5_pins>;
+	pinctrl-names = "default";
+	channel="channel_A";
+	status = "disabled";
+};
+
+&dsi0 {
+	status = "disabled";
+	#address-cells = <1>;
+	#size-cells = <0>;
+
+	mipi_panel: panel@0 {
+		compatible = "ilitek,ili9881c";
+		reg = <0>;
+		dsi-lanes = <2>;
+		switch-gpios = <&pinctrl RZG2L_GPIO(43, 0) GPIO_ACTIVE_HIGH>;
+		backlight = <&backlight>;
+		status = "disabled";
+	};
+};
+
 &pinctrl {
 	pinctrl-0 = <&sound_clk_pins>;
 	pinctrl-names = "default";
@@ -609,6 +640,11 @@
 	ssi3_pins: ssi3 {
 		groups = "ssi3_ctrl", "ssi3_data";
 		function = "ssi3";
+	};
+
+	gpt5_pins: gpt5 {
+		groups = "gpt5_a_b";
+		function = "gpt5";
 	};
 
 	sdhi0_emmc_pins: sd0emmc {
