MIPI:DTS:RzBoard: Change the screen to POWERTIP PH720128T005ZBC
    Support the new TFT 7" screen from POWERTIP
    some features as follow:
    - Display resolution  720x1280
    - Control IC          ILI9881C (TFT Unit
    - Input Method        True Multi-touch with up to 5 Points of Absolution
    - Touch IC            GT911

Signed-off-by: Nick <nick.cheng@avnet.com>

--- a/arch/arm64/boot/dts/renesas/overlays/rzboard-mipi.dts
+++ b/arch/arm64/boot/dts/renesas/overlays/rzboard-mipi.dts
@@ -33,7 +33,7 @@
 };
 
 &mipi_panel {
-	lcd-model = "sh720128t003";
+	lcd-model = "ph720128t005";
 	status = "okay";
 	port {
 		panel_in: endpoint {
@@ -47,5 +47,9 @@
 };
 
 &backlight {
+	status = "okay";
+};
+
+&gt911 {
 	status = "okay";
 };
