DRPAI:CODE&DTS:RZ: Add DRP-AI Support Package with kernel for RZ/V2L Board
    Apply these patches:
    (from meta-rz-features/recipes-drpai/recipes-kernel/linux/linux-renesas)
        0001-ov5645-Add-VGA-720x480-and-720p-resloutions.patch
        0002-ov5645-Add-pixel-rate-support-for-each-mode.patch
        0003-rzg2l-csi-Add-BGR24-and-YUYV-support.patch
        0004-rzg2l-dma-Add-BGR24-and-YUYV-support.patch
        0005-update-ov5645-VGA-setting.patch
        0006-update-cpg-function-for-drp.patch
        0007-enable-u-dma-buf-function.patch
        0008-enable-drpai-drv.patch

Signed-off-by: Nick <nick.cheng@avnet.com>

--- a/arch/arm64/boot/dts/renesas/r9a07g054l2-dev.dts
+++ b/arch/arm64/boot/dts/renesas/r9a07g054l2-dev.dts
@@ -67,6 +67,14 @@
 	vspm_if {
 		compatible = "renesas,vspm_if";
 	};
+	udmabuf@0 {
+		compatible = "ikwzm,u-dma-buf";
+		device-name = "udmabuf0";
+		minor-number = <0>;
+		size = <0x4000000>; // 64MiB
+		dma-coherent;
+		memory-region = <&image_buf0>;
+	};
 };
 
 &ehci0 {
@@ -83,4 +91,10 @@
 
 &ohci1 {
 	memory-region = <&global_cma>;
+};
+
+&drpai0 {
+    memory-region = <&drp_reserved>;
+    linux-memory-region = < &{/memory@48000000} >;
+    status = "okay";
 };
