ISP:CODE:RZ: Add ISP Support Package with kernel for RZ/V2L Board
    Apply these patches:
    (from meta-rz-features/recipes-isp/recipes-kernel/linux/linux-renesas)
	0001-add-ov5645-raw8-raw10-drivers.patch
	0002-add-simple-isp-library.patch
	0003-add-v4l2-drivers.patch

Signed-off-by: Nick <nick.cheng@avnet.com>

--- a/drivers/media/platform/Makefile
+++ b/drivers/media/platform/Makefile
@@ -81,3 +81,6 @@ obj-$(CONFIG_VIDEO_QCOM_CAMSS)		+= qcom/camss/
 obj-$(CONFIG_VIDEO_QCOM_VENUS)		+= qcom/venus/
 
 obj-y					+= sunxi/
+
+obj-y					+= simple_isp/
+obj-y					+= isp_ctrl/
