--- a/arch/arm64/boot/dts/renesas/overlays/Makefile
+++ b/arch/arm64/boot/dts/renesas/overlays/Makefile
@@ -13,3 +13,5 @@ dtb-y += rzboard-ext-uart2.dtbo
 dtb-y += rzboard-ext-i2c.dtbo
 dtb-y += rzboard-ext-spi.dtbo
 dtb-y += rzboard-mipi.dtbo
+# add the older panel
+dtb-y += rzboard-mipi-ph720128t003.dtbo
