--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -51,6 +51,7 @@ config SND_SOC_ALL_CODECS
 	imply SND_SOC_ALC5623
 	imply SND_SOC_ALC5632
 	imply SND_SOC_BT_SCO
+	imply SND_SOC_LITE_CODEC
 	imply SND_SOC_BD28623
 	imply SND_SOC_CQ0093VC
 	imply SND_SOC_CROS_EC_CODEC
@@ -533,6 +534,13 @@ config SND_SOC_BD28623
 
 config SND_SOC_BT_SCO
 	tristate "Dummy BT SCO codec driver"
+
+config SND_SOC_LITE_CODEC
+	tristate "Lite driver for generic DAC/ADC"
+	help
+	  This type of codecs only have ADC and DAC,
+	  it does not have any control buses such as I2C.
+	  Its digital audio interface is set by the hardware or is uniquely constant
 
 config SND_SOC_CPCAP
 	tristate "Motorola CPCAP codec"
